######################################################################
Revision history for Perl extension Config::Patch

0.03  2005/07/16
    (ms) Disallowing patching twice with the same key
    (ms) fixed replace() problem with two matches on the same line
    (ms) prevent replace() matches in patched sections

0.02  2005/07/16
    (ms) Corrected docs
    (ms) Added replace() and comment_out()

0.01  2005/07/15
    (ms) Where it all began.

TODO: 
* seek back one in append to check "\n"
* don't use base64, just encode unprintable chars
* length() won't work with UTF8 chars